fix spacing

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -30,6 +30,10 @@ body::before {
     z-index: -1;
 }
 
+.card.border-0.shadow-lg.text-white {
+    background: linear-gradient(90deg,rgba(155, 93, 224, 0.5) 0%, rgba(187, 225, 250, 0.51) 100%);
+}
+
 .card-contact {
     background: rgba(255, 255, 255, 0.2);
 }
